@@ -23,12 +23,12 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.5.0'
+    compile 'org.apache.commons:commons-dbcp2:2.6.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
 	compile 'org.apache.httpcomponents:httpclient:4.5.7'
-    compile 'org.springframework:spring-beans:5.1.5.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.5.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.6.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.6.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 
     compile fileTree(dir: 'lib', include: '*.jar')
