@@ -8,6 +8,6 @@ if [ "$SERVER" = "REED" ]; then
   EMAIL_LIST=rgd.developers@mcw.edu
 fi
 
-$APPHOME/run.sh -HPOPhenotype 2>&1 > run.log
+$APPHOME/run.sh -HPOPhenotype 2>&1 > $APPHOME/run_human.log
 
-mailx -s "[$SERVER] Human Phenotype Annotation Import" $EMAIL_LIST < $APPHOME/logs/status_human.log
+mailx -s "[$SERVER] Human Phenotype Annotation Import" $EMAIL_LIST < $APPHOME/logs/summary_human.log
