@@ -16,23 +16,40 @@ log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 log4j.appender.stdout.Threshold=INFO
 
 
-log4j.logger.status_human=info, status_human
+log4j.logger.status_human=info, status_human, summary_human
 log4j.appender.status_human=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status_human.Threshold=INFO
 log4j.appender.status_human.File=logs/status_human.log
 log4j.appender.status_human.layout=org.apache.log4j.PatternLayout
 log4j.appender.status_human.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.status_human.DatePattern='.'yyyy-MM-dd
+log4j.appender.status_human.DatePattern='.'yyyy-MM
 log4j.appender.status_human.Append=true
 
-log4j.logger.status_mouse=info, status_mouse
+#human readable version of 'status_human'
+log4j.appender.summary_human=org.apache.log4j.FileAppender
+log4j.appender.summary_human.Threshold=INFO
+log4j.appender.summary_human.File=logs/summary_human.log
+log4j.appender.summary_human.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_human.layout.ConversionPattern=%m%n
+log4j.appender.summary_human.Append=false
+
+
+log4j.logger.status_mouse=info, status_mouse, summary_mouse
 log4j.appender.status_mouse=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status_mouse.Threshold=INFO
 log4j.appender.status_mouse.File=logs/status_mouse.log
 log4j.appender.status_mouse.layout=org.apache.log4j.PatternLayout
 log4j.appender.status_mouse.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.status_mouse.DatePattern='.'yyyy-MM-dd
+log4j.appender.status_mouse.DatePattern='.'yyyy-MM
 log4j.appender.status_mouse.Append=true
+
+#human readable version of 'status_mouse'
+log4j.appender.summary_mouse=org.apache.log4j.FileAppender
+log4j.appender.summary_mouse.Threshold=INFO
+log4j.appender.summary_mouse.File=logs/summary_mouse.log
+log4j.appender.summary_mouse.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_mouse.layout.ConversionPattern=%m%n
+log4j.appender.summary_mouse.Append=false
 
 # inserted_annots
 log4j.logger.inserted_annots=debug, logInsertedAnnots
